--- a/.github/workflows/cd_stage.yml
+++ b/.github/workflows/cd_stage.yml
@@ -1,34 +1,27 @@
-name: "Deploy to staging"
-
+name: Deploy to staging
 on:
   push:
     branches:
       - "main"
 
 jobs:
-  redeploy-frontend:
-    name: Deploying everything to the staging
+  redeploy_everything:
+    name: Deploying everything to the staging cluster
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: SSH into the server and deploy
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: 98.88.38.201
-          username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd Turborepo-test-deployement/
-            git pull
-            pnpm run build
+      - name: SSH Into the server
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+          chmod 700 ~/ssh_key
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@34.201.64.147 '
+            cd monorepo-test-deployment/ &&
+            git pull &&
+            pnpm install &&
+            pnpm run build &&
+            pm2 restart frontend-server &&
+            pm2 restart socket-server &&
             pm2 restart http-server
-            pm2 restart websocket-server
-            pm2 restart frontend-server
+          
+
+
