--- a/.github/workflows/cd_stage.yml
+++ b/.github/workflows/cd_stage.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - name: SSH Into the server
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
           chmod 700 ~/ssh_key
-          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@34.201.64.147 '
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@34.201.64.147
             cd monorepo-test-deployment/ &&
             git pull &&
             pnpm install &&
