--- a/.github/workflows/cd_stage.yml
+++ b/.github/workflows/cd_stage.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
           chmod 700 ~/ssh_key
-          ssh -o StrictHostKeyChecking=no -i ~/ssh_key ubuntu@34.201.64.147
+          ssh -i ~/ssh_key ubuntu@34.201.64.147
             cd monorepo-test-deployment &&
             git pull &&
             pnpm install &&
