--- a/.github/workflows/cd_stage.yml
+++ b/.github/workflows/cd_stage.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
           chmod 600 ~/ssh_key
+          mkdir .ssh
           echo "${{secrets.KNOWN_HOSTS}}" &> ~/.ssh/known_hosts "
           ssh -i ~/ssh_key ubuntu@34.201.64.147
             cd monorepo-test-deployment &&
