--- a/.github/workflows/cd_stage.yml
+++ b/.github/workflows/cd_stage.yml
@@ -13,9 +13,11 @@ jobs:
       - name: SSH Into the server
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
-          chmod 600 ~/ssh_key
-          mkdir .ssh
-          echo "${{secrets.KNOWN_HOSTS}}" &> ~/.ssh/known_hosts "
+          chmod 700 ~/ssh_key
+          mkdir -p /home/runner/.ssh
+          ls /home/runner/.ssh
+          touch /home/runner/.ssh/known_hosts
+          echo "${{secrets.KNOWN_HOSTS}}" &> /home/runner/.ssh "
           ssh -i ~/ssh_key ubuntu@34.201.64.147
             cd monorepo-test-deployment &&
             git pull &&
