--- a/.github/workflows/cd_stage.yml
+++ b/.github/workflows/cd_stage.yml
@@ -10,25 +10,23 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: SSH Into the server
+      - name: Setup SSH
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
-          mkdir -p /home/runner/.ssh
-          ls /home/runner/.ssh
-          touch /home/runner/.ssh/known_hosts
-          echo "${{secrets.KNOWN_HOSTS}}"  &> /home/runner/.ssh/known_hosts
-          chmod 700 /home/runner/ssh_key
-          ssh -i ~/ssh_key ubuntu@34.201.64.147
-          cd monorepo-test-deployment &&
-          git pull &&
-          source ~/.bashrc &&
-          which pnpm || npm install -g pnpm &&
-          pnpm install &&
-          pnpm run build &&
-          pm2 restart frontend-server &&
-          pm2 restart socket-server &&
-          pm2 restart http-server
-          
-          
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+          chmod 600 ~/ssh_key
+          mkdir -p ~/.ssh
+          echo "${{ secrets.KNOWN_HOSTS }}" > ~/.ssh/known_hosts
 
-
+      - name: Deploy via SSH
+        run: |
+          ssh -o StrictHostKeyChecking=yes -i ~/ssh_key ubuntu@34.201.64.147 "
+            cd ~/monorepo-test-deployment && \
+            git pull && \
+            source ~/.bashrc && \
+            command -v pnpm >/dev/null 2>&1 || npm install -g pnpm && \
+            pnpm install && \
+            pnpm run build && \
+            pm2 restart frontend-server && \
+            pm2 restart socket-server && \
+            pm2 restart http-server
+          "
