--- a/.github/workflows/cd_stage.yml
+++ b/.github/workflows/cd_stage.yml
@@ -24,7 +24,7 @@ jobs:
             npm install -g pnpm &&
             pnpm install &&
             pnpm run build &&
-            pm2 restart fe-server &&
+            pm2 restart frontend-server &&
             pm2 restart http-server &&
-            pm2 restart ws-server
+            pm2 restart websocket-server
           "
